fix segment whitespace not preserved

--- a/features/textView/textSegment.module.scss
+++ b/features/textView/textSegment.module.scss
@@ -1,6 +1,7 @@
 .segment {
   display: inline;
   text-align: start;
+  white-space: pre;
 
   //make button appear like span
   background: none !important;
